--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.5",
     "drizzle-orm": "^0.44.6",
-    "next": "15.5.4",
+    "next": "^15.1.11",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "react": "19.1.0",
